objects/Field_TM_PDF_Queue__c/Field_TM_PDF_Queue__c.object-meta.xml
<CustomObject>
    <label>Field TM PDF Queue (Obsolete)</label>
    <nameField>
        <displayFormat>PDF-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field TM PDF Queue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>