objects/Field_TM_PDF_Queue__c/fields/Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Complete_Date__c</fullName>
    <label>Complete Date</label>
    <type>DateTime</type>
</CustomField>