objects/Field_TM_PDF_Queue__c/fields/TM__c.field-meta.xml
<CustomField>
    <fullName>TM__c</fullName>
    <label>T&amp;M</label>
    <referenceTo>TM__c</referenceTo>
    <relationshipName>Field_TM_PDF_Queue</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>